# finance-tracker

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: transaction.h  transactionmanager.h
src/: main.cpp  transaction.cpp  transactionmanager.cpp
tests/: test_transaction.cpp  test_transactionmanager.cpp
